--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro", 
+    "server": "cd server && node server.js"
   },
   "dependencies": {
     "@astrojs/react": "^4.4.2",
